{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 103,
  "lineage": "92145fb1-f45e-8e9d-c4f8-abccbf2f2b32",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:688956853267:instance/i-0f10ede57ae50fada",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f10ede57ae50fada",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03b824acdb01abb75",
            "private_dns": "ip-10-0-1-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.128",
            "public_dns": "ec2-44-200-220-161.compute-1.amazonaws.com",
            "public_ip": "44.200.220.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05c312f009b0cf9cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03c82e2d5c2712559"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c33678d5356c4d41",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c82e2d5c2712559"
            ]
          },
          "dependencies": [
            "aws_security_group.prod-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.alt-terraform-prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:688956853267:instance/i-0d0bcdc8ccc6cccb6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0bcdc8ccc6cccb6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00462a92d194ce64a",
            "private_dns": "ip-10-0-2-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.156",
            "public_dns": "ec2-54-86-24-185.compute-1.amazonaws.com",
            "public_ip": "54.86.24.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06eadeef16dc429f4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03c82e2d5c2712559"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097964ebfe1161692",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c82e2d5c2712559"
            ]
          },
          "dependencies": [
            "aws_security_group.prod-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.alt-terraform-prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:688956853267:instance/i-039a29dea97c7f640",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039a29dea97c7f640",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-027cd3ec8b7440a78",
            "private_dns": "ip-10-0-3-24.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.24",
            "public_dns": "ec2-54-175-123-179.compute-1.amazonaws.com",
            "public_ip": "54.175.123.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051820bf4b43ba439",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03c82e2d5c2712559"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ca79919de7c950ce",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c82e2d5c2712559"
            ]
          },
          "dependencies": [
            "aws_security_group.prod-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.alt-terraform-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688956853267:internet-gateway/igw-0eeea206d319df7d0",
            "id": "igw-0eeea206d319df7d0",
            "owner_id": "688956853267",
            "tags": {
              "Name": "main-IGW"
            },
            "tags_all": {
              "Name": "main-IGW"
            },
            "vpc_id": "vpc-0c0aff207b2e013b2"
          },
          "dependencies": [
            "aws_vpc.alt-terraform-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "production-ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:688956853267:loadbalancer/app/production-alb/b3dc3522f21a5cab",
            "arn_suffix": "app/production-alb/b3dc3522f21a5cab",
            "desync_mitigation_mode": "defensive",
            "dns_name": "production-alb-1861651050.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:688956853267:loadbalancer/app/production-alb/b3dc3522f21a5cab",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "production-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03c82e2d5c2712559"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-097964ebfe1161692"
              },
              {
                "subnet_id": "subnet-0c33678d5356c4d41"
              },
              {
                "subnet_id": "subnet-0ca79919de7c950ce"
              }
            ],
            "subnets": [
              "subnet-097964ebfe1161692",
              "subnet-0c33678d5356c4d41",
              "subnet-0ca79919de7c950ce"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0c0aff207b2e013b2",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.prod-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.alt-terraform-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prod-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:688956853267:listener/app/production-alb/b3dc3522f21a5cab/662f4fd955019b12",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:688956853267:targetgroup/prod-lb-tg/bb24f12d372ded4b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:688956853267:listener/app/production-alb/b3dc3522f21a5cab/662f4fd955019b12",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:688956853267:loadbalancer/app/production-alb/b3dc3522f21a5cab",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.production-ALB",
            "aws_lb_target_group.production",
            "aws_security_group.prod-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.alt-terraform-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:688956853267:targetgroup/prod-lb-tg/bb24f12d372ded4b",
            "arn_suffix": "targetgroup/prod-lb-tg/bb24f12d372ded4b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 20,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:688956853267:targetgroup/prod-lb-tg/bb24f12d372ded4b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c0aff207b2e013b2"
          },
          "dependencies": [
            "aws_vpc.alt-terraform-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-group-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:688956853267:targetgroup/prod-lb-tg/bb24f12d372ded4b-20230121233831310900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:688956853267:targetgroup/prod-lb-tg/bb24f12d372ded4b",
            "target_id": "i-0f10ede57ae50fada"
          },
          "dependencies": [
            "aws_instance.ubuntu-server",
            "aws_lb_target_group.production",
            "aws_security_group.prod-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.alt-terraform-prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:688956853267:targetgroup/prod-lb-tg/bb24f12d372ded4b-20230121233831034300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:688956853267:targetgroup/prod-lb-tg/bb24f12d372ded4b",
            "target_id": "i-0d0bcdc8ccc6cccb6"
          },
          "dependencies": [
            "aws_instance.ubuntu-server",
            "aws_lb_target_group.production",
            "aws_security_group.prod-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.alt-terraform-prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:688956853267:targetgroup/prod-lb-tg/bb24f12d372ded4b-20230121233831632400000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:688956853267:targetgroup/prod-lb-tg/bb24f12d372ded4b",
            "target_id": "i-039a29dea97c7f640"
          },
          "dependencies": [
            "aws_instance.ubuntu-server",
            "aws_lb_target_group.production",
            "aws_security_group.prod-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.alt-terraform-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688956853267:route-table/rtb-0e1063bbfd962f5ac",
            "id": "rtb-0e1063bbfd962f5ac",
            "owner_id": "688956853267",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eeea206d319df7d0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-rt"
            },
            "tags_all": {
              "Name": "prod-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0aff207b2e013b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.alt-terraform-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8256d19d4a7d71b",
            "route_table_id": "rtb-0e1063bbfd962f5ac",
            "subnet_id": "subnet-0c33678d5356c4d41"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.alt-terraform-prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8f8b0192af9cdcf",
            "route_table_id": "rtb-0e1063bbfd962f5ac",
            "subnet_id": "subnet-097964ebfe1161692"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.alt-terraform-prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05319b7ce19f0325e",
            "route_table_id": "rtb-0e1063bbfd962f5ac",
            "subnet_id": "subnet-0ca79919de7c950ce"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.alt-terraform-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688956853267:security-group/sg-03c82e2d5c2712559",
            "description": "Allow traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c82e2d5c2712559",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_traffic",
            "name_prefix": "",
            "owner_id": "688956853267",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod_sg"
            },
            "tags_all": {
              "Name": "prod_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0aff207b2e013b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.alt-terraform-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688956853267:subnet/subnet-0c33678d5356c4d41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c33678d5356c4d41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "688956853267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0c0aff207b2e013b2"
          },
          "dependencies": [
            "aws_vpc.alt-terraform-prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688956853267:subnet/subnet-097964ebfe1161692",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097964ebfe1161692",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "688956853267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0c0aff207b2e013b2"
          },
          "dependencies": [
            "aws_vpc.alt-terraform-prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688956853267:subnet/subnet-0ca79919de7c950ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca79919de7c950ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "688956853267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-3"
            },
            "tags_all": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-0c0aff207b2e013b2"
          },
          "dependencies": [
            "aws_vpc.alt-terraform-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "alt-terraform-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688956853267:vpc/vpc-0c0aff207b2e013b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00447419fcb659510",
            "default_route_table_id": "rtb-0973de61f20f567dd",
            "default_security_group_id": "sg-0fdb0e1583a2feacd",
            "dhcp_options_id": "dopt-09321020e1445bada",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0aff207b2e013b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0973de61f20f567dd",
            "owner_id": "688956853267",
            "tags": {
              "Name": "alt-project"
            },
            "tags_all": {
              "Name": "alt-project"
            }
          }
        }
      ]
    }
  ]
}